--- a/saas-metrics/viral-coefficient.html
+++ b/saas-metrics/viral-coefficient.html
@@ -23,26 +23,26 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="theme-color" content="#334ac0">
 
-    <title>What is Viral Coefficient? | Learn Viral Coefficient | Crayond
+    <title>What is Viral Coefficient? | Crayond
         </title>
     <meta name="description"
-        content="Measure the number of new users that a customer brings in on average.   .">
-    <link rel="canonical" href="https://www.crayond.com/" />
+        content="Viral Coefficient is the number of new users that a customer brings in on average. This metric is correlated to the quality of your product.">
+    <link rel="canonical" href="https://www.crayond.com/saas-metrics/viral-coefficient" />
 
     <!-- Og meta dates -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="CRAYOND" />
-    <meta property="og:url" content="https://www.crayond.com/">
-    <meta property="og:title" content="Crayon'd | Breathe Life Into Your Product idea" />
+    <meta property="og:url" content="https://www.crayond.com/saas-metrics/viral-coefficient">
+    <meta property="og:title" content="What is Viral Coefficient? | Crayond" />
     <meta property="og:description"
-        content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." />
+        content="Viral Coefficient is the number of new users that a customer brings in on average. This metric is correlated to the quality of your product." />
     <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
     <!-- Twitter mate date     -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@crayondofficial">
-    <meta name="twitter:title" content="Crayon'd | Breathe Life Into Your Product idea">
+    <meta name="twitter:title" content="What is Viral Coefficient? | Crayond">
     <meta name="twitter:description"
-        content="We help startup founders and businesses craft their ideas into world-class products">
+        content="Viral Coefficient is the number of new users that a customer brings in on average. This metric is correlated to the quality of your product.">
     <meta name="twitter:image" content="https://crayond.com/images/OGImage.jpg">
 
 
