--- a/saas-metrics/viral-coefficient.html
+++ b/saas-metrics/viral-coefficient.html
@@ -241,7 +241,7 @@
 
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id12', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-churn.html" > 12.Customer churn </a>
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-churn.html" > 12.Customer Churn </a>
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id13', 0)">
                         <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="annual-recurring-revenue.html" > 13.Annual Recurring Revenue </a>
@@ -266,18 +266,18 @@
                     </div>
                     <p class=" head_ques fontGraphikSemibold "> What is Viral Coefficient? </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        The number of new users that a customer brings in on average. This metric does not account for
-                        mere referrals, but for leads that convert.
+                       <li style="color:#665CD7"><a style="color:#7B6A77">  The number of new users that a customer brings in on average.</a></li><br/>
+                         <li style="color:#665CD7"><a style="color:#7B6A77">This metric does not account for mere referrals, but for leads that convert.</a></li>
                     </p>
                     <p class=" head_ques fontGraphikSemibold ">Why is the Viral Coefficient important?</p>
 
 
                     <p style="color:#7B6A77;line-height: 2.0rem;">Indicates a company’s ability to grow, exponentially
                         or not.<br />
-                        It is correlated to the quality of your product.<br />
-                        That is, the better the product, the higher the Viral Coefficient.<br />
-                        Viral products are ones that have been positively received by many, many users.<br />
-                        Thus, it also helps measure the effectiveness of word-of-mouth strategies.<br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">  It is correlated to the quality of your product.</a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77">  That is, the better the product, the higher the Viral Coefficient.</a></li><br />
+                                <li style="color:#665CD7"><a style="color:#7B6A77"> Viral products are ones that have been positively received by many, many users.</a></li><br />
+                                    <li style="color:#665CD7"><a style="color:#7B6A77"> Thus, it also helps measure the effectiveness of word-of-mouth strategies.</a></li>
 
                         .</p>
                     <p class=" head_imp fontGraphikSemibold ">How to calculate Viral Coefficient?</p>
@@ -286,10 +286,10 @@
                         <p class="formula"> Viral Coefficient = (C*R*CR)/100</p>
                     </div>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Take the total number of customers (C)<br />
-                        Multiply it with the average number of referrals (R)<br />
-                        Multiply the result with the average conversion rate (CR)<br />
-                        Divide this result by 100 <br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">  Take the total number of customers (C)</a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77">  Multiply it with the average number of referrals (R)</a></li><br />
+                                <li style="color:#665CD7"><a style="color:#7B6A77">  Multiply the result with the average conversion rate (CR)</a></li><br />
+                                    <li style="color:#665CD7"><a style="color:#7B6A77">  Divide this result by 100 </a></li><br />
 
 
 
@@ -300,10 +300,10 @@
                     <p class=" head_imp fontGraphikSemibold ">Tips to achieve a higher Viral Coefficient
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Make your product eligible for virality, be it through some quirky marketing or some
-                        out-of-the-box feature.<br />
-                        Make your product as scalable as you can.<br />
-                        Have a referral program that gives existing customers an incentive to bring in more users.<br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Make your product eligible for virality, be it through some quirky marketing or some
+                        out-of-the-box feature.</a></li><br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">  Make your product as scalable as you can.</a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77">  Have a referral program that gives existing customers an incentive to bring in more users.</a></li><br />
 
 
                     </p>
