--- a/saas-metrics/viral-coefficient.html
+++ b/saas-metrics/viral-coefficient.html
@@ -286,10 +286,10 @@
                         <p class="formula"> Viral Coefficient = (C*R*CR)/100</p>
                     </div>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        <li style="color:#665CD7"><a style="color:#7B6A77">  Take the total number of customers (C)</a></li><br />
-                            <li style="color:#665CD7"><a style="color:#7B6A77">  Multiply it with the average number of referrals (R)</a></li><br />
-                                <li style="color:#665CD7"><a style="color:#7B6A77">  Multiply the result with the average conversion rate (CR)</a></li><br />
-                                    <li style="color:#665CD7"><a style="color:#7B6A77">  Divide this result by 100 </a></li><br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">  Take the total number of customers (C).</a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77">  Multiply it with the average number of referrals (R).</a></li><br />
+                                <li style="color:#665CD7"><a style="color:#7B6A77">  Multiply the result with the average conversion rate (CR).</a></li><br />
+                                    <li style="color:#665CD7"><a style="color:#7B6A77">  Divide this result by 100. </a></li><br />
 
 
 
