--- a/saas-metrics/viral-coefficient.html
+++ b/saas-metrics/viral-coefficient.html
@@ -311,10 +311,10 @@
                         <div class=" col-7 bottom_next"style="float:right;right:0 ;position:absolute;">
                           <div class="row" style="border-left: 3px solid #665CD7;">
                               <div class="col-10">
-                              <b style="padding-left:8px;">Net Promoter </b> <b style="padding-left:8px;">Score</b>
+                              <b class="net" style="padding-left:8px;">Net Promoter </b> <b  class="score"style="padding-left:8px;">Score</b>
                      </div>
                       
-                          <div class="col-2"style="top:10px;padding:0px">
+                          <div class=" ar1 col-2"style="top:10px;padding:0px">
                          
                           <i class="fa fa-chevron-right" style="font-size: 13px;color:#665CD7;" aria-hidden="true"></i>
                       </div>
